--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiler files
 cache/
 out/
+script/
 
 # Ignores development broadcast logs
 !/broadcast
@@ -12,3 +13,8 @@ docs/
 
 # Dotenv file
 .env
+
+#Other files
+lib/
+
+broadcast/
